--- a/index.html
+++ b/index.html
@@ -21,54 +21,54 @@
           <div class="profile__info">
             <div class="profile__main">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button class="profile__edit-btn button"></button>
+              <button type="button" aria-label="Редактировать" class="profile__edit-btn button"></button>
             </div>
             <p class="profile__occupation">Исследователь океана</p>
           </div>
-          <button class="profile__add-btn button"></button>
+          <button type="button" aria-label="Добавить" class="profile__add-btn button"></button>
         </section>
 
         <section class="places">
           <div class="place">
-            <img class="place__image" src="./images/karachaevsk.jpg" alt="Часовня">
+            <img class="place__image" src="./images/karachaevsk.png" alt="Часовня">
             <div class="place__details">
               <h2 class="place__title">Карачаевск</h2>
-              <button class="place__like-btn"></button>
+              <button type="button" aria-label="Понравилось" class="place__like-btn"></button>
             </div>
           </div>
           <div class="place">
             <img class="place__image" src="./images/elbrus.png" alt="Поле">
             <div class="place__details">
               <h2 class="place__title">Гора Эльбрус</h2>
-              <button class="place__like-btn"></button>
+              <button type="button" aria-label="Понравилось" class="place__like-btn"></button>
             </div>
           </div>
           <div class="place">
             <img class="place__image" src="./images/dombay.png" alt="Горы">
             <div class="place__details">
               <h2 class="place__title">Домбай</h2>
-              <button class="place__like-btn"></button>
+              <button type="button" aria-label="Понравилось" class="place__like-btn"></button>
             </div>
           </div>
           <div class="place">
             <img class="place__image" src="./images/elbrus.png" alt="Поле">
             <div class="place__details">
               <h2 class="place__title">Гора Эльбрус</h2>
-              <button class="place__like-btn"></button>
+              <button type="button" aria-label="Понравилось" class="place__like-btn"></button>
             </div>
           </div>
           <div class="place">
             <img class="place__image" src="./images/dombay.png" alt="Горы">
             <div class="place__details">
               <h2 class="place__title">Домбай</h2>
-              <button class="place__like-btn"></button>
+              <button type="button" aria-label="Понравилось" class="place__like-btn"></button>
             </div>
           </div>
           <div class="place">
-            <img class="place__image" src="./images/karachaevsk.jpg" alt="Часовня">
+            <img class="place__image" src="./images/karachaevsk.png" alt="Часовня">
             <div class="place__details">
               <h2 class="place__title">Карачаево-Черкессия</h2>
-              <button class="place__like-btn button"></button>
+              <button type="button" aria-label="Понравилось" class="place__like-btn button"></button>
             </div>
           </div>
         </section>
@@ -83,16 +83,16 @@
 
     <div class="popup">      
       <div class="popup__container">
-        <button class="popup__close-btn button"></button>
+        <button type="button" aria-label="Закрыть" class="popup__close-btn button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form action="#" class="popup__form">
-          <input type="text" class="popup__field popup__field_type_name" value="" placeholder="Введите имя">
-          <input type="text" class="popup__field popup__field_type_occupation" value="" placeholder="Введите  род деятельности">
+        <form action="#" name="profile" method="POST" class="popup__form">
+          <input type="text" name="name" required class="popup__field popup__field_type_name" value="" placeholder="Введите имя">
+          <input type="text" name="occupation" required class="popup__field popup__field_type_occupation" value="" placeholder="Введите  род деятельности">
           <button type="submit" class="popup__save-button button">Сохранить</button>
         </form>
       </div>      
     </div>
-    <script src="./index.js"></script>
+    <script src="./script/index.js"></script>
 
   </body>
 
