Проектная работа 5. Вторая проверка

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       </div>
     </template>
 
+    <script src="./script/initial-cards.js"></script>
     <script src="./script/index.js"></script>
 
   </body>
