--- a/index.html
+++ b/index.html
@@ -43,10 +43,22 @@
       <div class="popup__container">
         <button type="button" aria-label="Закрыть" class="popup__close-btn button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form action="#" name="profile" method="POST" class="popup__form">
-          <input type="text" name="name" required class="popup__field popup__field_type_name" value="" placeholder="Введите имя">
-          <input type="text" name="occupation" required class="popup__field popup__field_type_occupation" value="" placeholder="Введите  род деятельности">
-          <button type="submit" class="popup__save-button button">Сохранить</button>
+        <form action="#" name="profile" method="POST" class="popup__form" novalidate>
+          <label class="form__label">
+            <input type="text" name="name" required 
+                    class="popup__field popup__field_type_name" 
+                    value="" placeholder="Введите имя"
+                    autocomplete="off" minlength="2" maxlength="40">
+            <span class="form__error" id="name-error"></span>
+          </label>
+          <label class="form__label">
+            <input type="text" name="occupation" required 
+                    class="popup__field popup__field_type_occupation" 
+                    value="" placeholder="Введите род деятельности"
+                    autocomplete="off" minlength="2" maxlength="200">
+            <span class="form__error" id="occupation-error"></span>
+          </label>
+            <button type="submit" class="popup__save-button popup__save-button_disabled button">Сохранить</button>
         </form>
       </div>      
     </div>
@@ -55,10 +67,22 @@
       <div class="popup__container">
         <button type="button" aria-label="Закрыть" class="popup__close-btn button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form action="#" name="new-place" method="POST" class="popup__form">
-          <input type="text" name="title" required class="popup__field popup__field_type_title" value="" placeholder="Название">
-          <input type="text" name="image-link" required class="popup__field popup__field_type_image-link" value="" placeholder="Ссылка на картинку">
-          <button type="submit" class="popup__save-button button">Создать</button>
+        <form action="#" name="new-place" method="POST" class="popup__form" novalidate>
+          <label class="form__label">
+            <input type="text" name="title" required 
+                    class="popup__field popup__field_type_title" 
+                    value="" placeholder="Название"
+                    autocomplete="off" minlength="2" maxlength="30">
+            <span class="form__error" id="title-error"></span>
+          </label>
+          <label class="form__label">
+            <input type="url" name="image-link" required 
+                    class="popup__field popup__field_type_image-link" 
+                    value="" placeholder="Ссылка на картинку"
+                    autocomplete="off">
+            <span class="form__error" id="image-link-error"></span>
+          </label>
+          <button type="submit" class="popup__save-button popup__save-button_disabled button">Создать</button>
         </form>
       </div>      
     </div>
@@ -84,6 +108,7 @@
 
     <script src="./script/initial-cards.js"></script>
     <script src="./script/index.js"></script>
+    <script src="./script/validate.js"></script>
 
   </body>
 
