Проектная работа 6. Вторая  проверка

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="popup popup_type_photo">   
       <div class="popup__container popup__container_no-background">
         <button type="button" aria-label="Закрыть" class="popup__close-btn button"></button>
-        <img class="popup__photo" src="" alt="Фото места">
+        <img class="popup__photo" src="" alt="">
         <h3 class="popup__photo-title"></h3>
       </div>      
     </div>
